5372.	[bug]		Fix migration from existing DNSSEC key files using
			auto-dnssec maintain to dnssec-policy. [GL #1706]

5371.	[bug]		Improve incremental updates of the RPZ summary
			database to reduce delays that could occur when
			a policy zone update included a large number of
			record deletions. [GL #1447]

5370.	[bug]		Deactivation of a netmgr handle associated with a
			socket could be skipped in some circumstances.
			Fixed by deactivating the netmgr handle before
			scheduling the asynchronous close routine. [GL #1700]

5368.	[bug]		Named failed to restart if 'rndc addzone' names
			contained special characters (e.g. '/'). [GL #1655]

5367.	[bug]		Fixed a flaw in the calculation of zone database
			size so that "max-journal-size default" will use
			the correct limit. [GL #1661]

	--- 9.16.1 released ---

5366.	[bug]		Fix a race condition with the keymgr when the same
			zone plus dnssec-policy is configured in multiple
			views. [GL #1653]

5365.	[bug]		Algorithm rollover was stuck on submitting DS
			because keymgr thought it would move to an invalid
			state.  Fixed by checking the current key against
			the desired state, not the existing state. [GL #1626]

5364.	[bug]		Algorithm rollover waited too long before introducing
			zone signatures.  It waited to make sure all signatures
			were regenerated, but when introducing a new algorithm,
			all signatures are regenerated immediately.  Only
			add the sign delay if there is a predecessor key.
			[GL #1625]

5363.	[bug]		When changing a dnssec-policy, existing keys with
			properties that no longer match were not being retired.
			[GL #1624]

5361.	[bug]		named might not accept new connections after
			hitting tcp-clients quota. [GL #1643]

5360.	[bug]		delv could fail to load trust anchors in DNSKEY
			format. [GL #1647]

5358.	[bug]		Inline master zones whose master files were touched
			but otherwise unchanged and were subsequently reloaded
			may have stopped re-signing. [GL !3135]
