@@ -890,7 +890,6 @@ named_zone_configure(const cfg_obj_t *config, const cfg_obj_t *vconfig,
 	isc_stats_t *zoneqrystats;
 	dns_stats_t *rcvquerystats;
 	dns_stats_t *dnssecsignstats;
-	dns_stats_t *dnssecrefreshstats;
 	dns_zonestat_level_t statlevel = dns_zonestat_none;
 	int seconds;
 	dns_zone_t *mayberaw = (raw != NULL) ? raw : zone;
@@ -1187,18 +1186,15 @@ named_zone_configure(const cfg_obj_t *config, const cfg_obj_t *vconfig,
 	zoneqrystats = NULL;
 	rcvquerystats = NULL;
 	dnssecsignstats = NULL;
-	dnssecrefreshstats = NULL;
 	if (statlevel == dns_zonestat_full) {
 		RETERR(isc_stats_create(mctx, &zoneqrystats,
 					ns_statscounter_max));
 		RETERR(dns_rdatatypestats_create(mctx, &rcvquerystats));
 		RETERR(dns_dnssecsignstats_create(mctx, &dnssecsignstats));
-		RETERR(dns_dnssecsignstats_create(mctx, &dnssecrefreshstats));
 	}
 	dns_zone_setrequeststats(zone, zoneqrystats);
 	dns_zone_setrcvquerystats(zone, rcvquerystats);
 	dns_zone_setdnssecsignstats(zone, dnssecsignstats);
-	dns_zone_setdnssecrefreshstats(zone, dnssecrefreshstats);
 
 	if (zoneqrystats != NULL) {
 		isc_stats_detach(&zoneqrystats);
@@ -1210,10 +1206,6 @@ named_zone_configure(const cfg_obj_t *config, const cfg_obj_t *vconfig,
 
 	if (dnssecsignstats != NULL) {
 		dns_stats_detach(&dnssecsignstats);
-	}
-
-	if (dnssecrefreshstats != NULL) {
-		dns_stats_detach(&dnssecrefreshstats);
 	}
 
 	/*
