@@ -1259,8 +1259,8 @@ add_sigs(dns_update_log_t *log, dns_zone_t *zone, dns_db_t *db,
 		added_sig = true;
 		/* Update DNSSEC sign statistics. */
 		if (dnssecsignstats != NULL) {
-			dns_dnssecsignstats_increment(dnssecsignstats,
-						      dst_key_id(keys[i]));
+			dns_dnssecsignstats_increment(
+				dnssecsignstats, dst_key_id(keys[i]), false);
 		}
 	}
 	if (!added_sig) {
